...
@Composable
fun DetailToolBar(openDialog: MutableState<Boolean>) {
    TopAppBar(
        title = { Text(stringResource(R.string.app_name)) },
        actions = {
            IconButton(
                modifier = Modifier.testTag("delete"),
                onClick = { openDialog.value = true }
            ) {
                Icon(
                    Icons.Default.Delete,
                    contentDescription = stringResource(R.string.menu_delete)
                )
...
